--- a/P.I.JMP/angular.json
+++ b/P.I.JMP/angular.json
@@ -27,12 +27,9 @@
               "src/assets"
             ],
             "styles": [
-              "P.I.JMP/node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
-            "scripts": [
-              "P.I.JMP/node_modules/bootstrap/dist/js/bootstrap.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
