--- a/ProyectoIntegrador_JMP/angular.json
+++ b/ProyectoIntegrador_JMP/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "P.I.JMP": {
+    "ProyectoIntegrador_JMP: {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
