--- a/ProyectoIntegrado_JMP/angular.json
+++ b/ProyectoIntegrado_JMP/angular.json
@@ -27,11 +27,11 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/bootstrap/dist/css/bootstrap.css",
+              "ProyectoIntegrado_JMP/node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
             "scripts": [
-              "./node_modules/bootstrap/dist/js/bootstrap.js"
+              "ProyectoIntegrado_JMP/node_modules/bootstrap/dist/js/bootstrap.js"
             ]
           },
           "configurations": {
