--- a/ProyectoIntegrado_JMP/Back-End-SpringBoot/pom.xml
+++ b/ProyectoIntegrado_JMP/Back-End-SpringBoot/pom.xml
@@ -9,12 +9,12 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.portfolio</groupId>
-	<artifactId>JMP</artifactId>
+	<artifactId>jmp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>JMP</name>
-	<description>Portfolio de JMP para Argentina Programa</description>
+	<name>jmp</name>
+	<description>Portfolio de JMP</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
