--- a/ProyectoIntegrado_JMP/Front-End-Angular/package.json
+++ b/ProyectoIntegrado_JMP/Front-End-Angular/package.json
@@ -20,8 +20,11 @@
     "@angular/router": "~13.3.0",
     "bootstrap": "^5.1.3",
     "ng-circle-progress": "^1.6.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "webpack-cli": "^4.9.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
